# libuvc

./: .gitignore  .travis.yml  CMakeLists.txt  Config.cmake.in  INSTALL_WINDOWS.md  INSTALL_WINDOWS.txt  LICENSE.txt  README.md  changelog.txt  doxygen.conf  libuvc.pc.cmake.in  libuvc.pc.in  libuvcConfig.cmake  libuvcConfig.cmake.in  package.xml  standard-units.yaml
.github/workflows/: web.yml
cameras/: asus_Zenbook_UX410UAR_1.0_builtin_chicony_USB2.0_HD_UVC_webcam.txt  logitech_C922_Pro_Stream_Webcam.txt  logitech_brio_4K_stream_edition.txt  logitech_hd_pro_920.txt  microsoft_Lifecam_HD-3000.txt
cmake/: FindJpegPkg.cmake  FindLibUSB.cmake  FindOpenCVPkg.cmake
include/libuvc/: libuvc.h  libuvc_config.h  libuvc_config.h.in  libuvc_internal.h
src/: ctrl-gen.c  ctrl-gen.py  ctrl.c  device.c  diag.c  example.c  frame-mjpeg.c  frame.c  h264_example.c  init.c  misc.c  stream.c  test.c  time_linux.h  time_mac.h  time_windows.h
tests/: CMakeLists.txt  test-enumerating-devices.c
